Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1359872: Repeat daily error
 - Fixed bug 1358775: Get an error 'Cannot find language file: translations/none.txt
 - Implemented PATCH 1221971: IMAP Authentication
 - Modified upcoming.php to display tasks (see upcoming.php for details)
 - Implemented RFE 1199126: Link Language and Time/Date Formats
 - Fixed bug 1357953: rollover info translation grammar problem
 - Fixed bug 1357943: short description length mismatch
 - Fixed bug 1357946: translation problem on system settings page
 - Fixed bug 1358124: popup: short description length problem
 - Implemented RFE 1357579: Link to 'Home' in trailer menu
 - Fixed bug 1354832: import ical - first edited event multiplies
 - Fixed bug 1356024: event link in Activity log - NOT FOUND error
 - Fixed bug 1356541: ics-import will not correctly handle 'private'-entries
 - Fixed bug 1355655: Task Completed dates not stored properly
 - Fixed bug 1313905: database password can't contain '#' chars
 - Fixed bug 1353588: 4:30pm PST event bug
 - Fixed bug 1353470: Events in day view shown incorrectly - CVS
 - Corrected content type in publish.php and freebusy.php
 - Fixed bug 1353363: publish.php logic error for public user?
 - Added new translation decoding for HTML entities in javascript
 - Fixed bug 1351971: "Delete"-Button won't work properly for reports
 - Applied PATCH 1297654: eliminate deprecated tags, excluding <b></b>
 - Applied PATCH 1349875: Fix for WebCalendar.class
 - Fixed bug 1277803: new untimed events - aren't
 - Fixed bug 1346660: new entry: time check not informed correctly ->misspelling
 - Fixed bug 1352513: Repeating Events interface is broken in Safari
 - Fixed bug 1352504: fix for one type of Lost Connection to MySQL server error
 - Fixed bug 1351971: "Delete"-Button won't work properly for reports
 - Fixed bug 1282382: Del from NUC or Pub Acc deletes from all
 - Fixed bug 1220225: 'layered events' cannot be shown by the public