@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1350243: Wrong task order in upgrading.html (convert_passwords.php error)
       1359872: Repeat daily error
       1358775: Get an error 'Cannot find language file: translations/none.txt
       1357953: rollover info translation grammar problem
